Fixes: - change background color - little changes in header - make sidebar sticky, move expand/collapse arrow to the bottom of it

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  padding-top: 50px;
+  background-color: #f5f7fa !important;
+  padding-top: 46.67px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
